# MonteCarlo

./: README.md  environment.yaml  pyproject.toml
Zadanie1/MonteCarlo/: README.md  environment.yaml  pyproject.toml
Zadanie1/MonteCarlo/src/utils/: calculate_C.py  manage_results.py
Zadanie2/BallsAndBins/: README.md  env.yaml
Zadanie2/BallsAndBins/config/: throwing_config.yaml
Zadanie2/BallsAndBins/results/: raw_results.json
Zadanie2/BallsAndBins/src/: plotting.py  simulation.py
Zadanie2/BallsAndBins/src/utils/: handle_results.py  simulate_throws.py
configs/: monte_carlo_config.yaml
hw3/Ex1/BallsAndBins/config/: throwing_config.yaml
hw3/Ex1/BallsAndBins/src/: plotting.py  simulation.py
hw3/Ex1/BallsAndBins/src/ex3/: plot_ln.py
hw3/Ex1/BallsAndBins/src/utils/: simulate_throws.py
hw3/Ex1/results/: maximum_load_results.json
hw3/Ex2/: environment.yml  main.py
hw3/Ex2/conf/: config.yaml
hw3/Ex2/src/: generate_data.py  insertion_sort.py  stats.py
hw3/ex3/: README.md  environment.yml  main.py
hw3/ex3/config/: config.yaml
hw3/ex3/src/: experiments.py  plotting.py  simulation.py
hw4/Ex1/: bin.py
hw4/Ex2/: random_walk.py
hw4/Ex3/: walk.py
outputs/2024-11-03/21-02-30/.hydra/: config.yaml  hydra.yaml
src/: monte_carlo.py
src/utils/: approximate_integral.py  approximate_pi.py  calculate_C.py  calculate_M.py  manage_results.py
